prevents duplicate enrollment as well as sending mail to duplicate ids